--- a/School.Core/Resources/SharedResources.AR.resx
+++ b/School.Core/Resources/SharedResources.AR.resx
@@ -126,8 +126,14 @@
   <data name="Deleted" xml:space="preserve">
     <value>تم الحذف بنجاح</value>
   </data>
+  <data name="DepartmentID" xml:space="preserve">
+    <value>رقم القسم</value>
+  </data>
   <data name="IsExist" xml:space="preserve">
     <value>موجود بالفعل</value>
+  </data>
+  <data name="IsNotExist" xml:space="preserve">
+    <value>غير موجود</value>
   </data>
   <data name="MaxLength" xml:space="preserve">
     <value>يجب ان لا يزيد عدد الاحرف عن 100</value>
