--- a/School.Core/Resources/SharedResources.EN.resx
+++ b/School.Core/Resources/SharedResources.EN.resx
@@ -129,6 +129,9 @@
   <data name="IsExist" xml:space="preserve">
     <value>Is Alrady Exist</value>
   </data>
+  <data name="ISNotExist" xml:space="preserve">
+    <value>ISNotExist</value>
+  </data>
   <data name="MaxLength" xml:space="preserve">
     <value>maxLength mustn't increse than 100</value>
   </data>
