--- a/School.Core/Resources/SharedResources.EN.resx
+++ b/School.Core/Resources/SharedResources.EN.resx
@@ -126,11 +126,14 @@
   <data name="Deleted" xml:space="preserve">
     <value>Deleted Successfully</value>
   </data>
+  <data name="DepartmentID" xml:space="preserve">
+    <value>Department ID</value>
+  </data>
   <data name="IsExist" xml:space="preserve">
     <value>Is Alrady Exist</value>
   </data>
-  <data name="ISNotExist" xml:space="preserve">
-    <value>ISNotExist</value>
+  <data name="IsNotExist" xml:space="preserve">
+    <value>Is Not Exict</value>
   </data>
   <data name="MaxLength" xml:space="preserve">
     <value>maxLength mustn't increse than 100</value>
