--- a/School.Core/Resources/SharedResources.AR.resx
+++ b/School.Core/Resources/SharedResources.AR.resx
@@ -129,6 +129,12 @@
   <data name="DepartmentID" xml:space="preserve">
     <value>رقم القسم</value>
   </data>
+  <data name="EmailIsExist" xml:space="preserve">
+    <value>الايميل الذي ادخلته موجود بالفعل</value>
+  </data>
+  <data name="FaildToAddUser" xml:space="preserve">
+    <value>حدث خطأ اثناء اضافة المستخدم</value>
+  </data>
   <data name="IsExist" xml:space="preserve">
     <value>موجود بالفعل</value>
   </data>
@@ -144,6 +150,9 @@
   <data name="NotFound" xml:space="preserve">
     <value>غير متوفر</value>
   </data>
+  <data name="PasswordNptEqualConfiemPassword" xml:space="preserve">
+    <value>الباسورد و الباسوردالمؤكد يجب ان يكونا متساوين</value>
+  </data>
   <data name="Required" xml:space="preserve">
     <value>هذا الحقل مطلوب</value>
   </data>
@@ -155,5 +164,8 @@
   </data>
   <data name="Updated" xml:space="preserve">
     <value>تم التعديل بنجاح</value>
+  </data>
+  <data name="UserNameIsExist" xml:space="preserve">
+    <value>اسم المستخدم هذا موجود بالفعل</value>
   </data>
 </root>
