Add Edited User EndPoint

--- a/School.Core/Resources/SharedResources.AR.resx
+++ b/School.Core/Resources/SharedResources.AR.resx
@@ -165,6 +165,9 @@
   <data name="Updated" xml:space="preserve">
     <value>تم التعديل بنجاح</value>
   </data>
+  <data name="UpdatedFailed" xml:space="preserve">
+    <value>خطأ في التعديل</value>
+  </data>
   <data name="UserNameIsExist" xml:space="preserve">
     <value>اسم المستخدم هذا موجود بالفعل</value>
   </data>
