--- a/School.Core/Resources/SharedResources.EN.resx
+++ b/School.Core/Resources/SharedResources.EN.resx
@@ -120,6 +120,9 @@
   <data name="BadRequest" xml:space="preserve">
     <value>can't understand this request</value>
   </data>
+  <data name="ChangedPassword" xml:space="preserve">
+    <value>Password had been changed</value>
+  </data>
   <data name="Created" xml:space="preserve">
     <value>Created Successfully</value>
   </data>
@@ -137,6 +140,9 @@
   </data>
   <data name="FaildToAddUser" xml:space="preserve">
     <value>Failed to add User</value>
+  </data>
+  <data name="FaildToChangePassword" xml:space="preserve">
+    <value>Failed to change password</value>
   </data>
   <data name="IsExist" xml:space="preserve">
     <value>Is Alrady Exist</value>
