--- a/School.Core/Resources/SharedResources.AR.resx
+++ b/School.Core/Resources/SharedResources.AR.resx
@@ -120,11 +120,17 @@
   <data name="BadRequest" xml:space="preserve">
     <value>هذا الطلب لا يمكن فهمه</value>
   </data>
+  <data name="ChangedPassword" xml:space="preserve">
+    <value> تم تغير كلمة المرور</value>
+  </data>
   <data name="Created" xml:space="preserve">
     <value>تمت الاضافة بنجاح</value>
   </data>
   <data name="Deleted" xml:space="preserve">
     <value>تم الحذف بنجاح</value>
+  </data>
+  <data name="DeletedFailed" xml:space="preserve">
+    <value>حدث خطأ اثناء عملية حذف البيانات</value>
   </data>
   <data name="DepartmentID" xml:space="preserve">
     <value>رقم القسم</value>
@@ -134,6 +140,9 @@
   </data>
   <data name="FaildToAddUser" xml:space="preserve">
     <value>حدث خطأ اثناء اضافة المستخدم</value>
+  </data>
+  <data name="FaildToChangePassword" xml:space="preserve">
+    <value>خطأ في تغير كلمة المرور</value>
   </data>
   <data name="IsExist" xml:space="preserve">
     <value>موجود بالفعل</value>
