--- a/School.Core/Resources/SharedResources.EN.resx
+++ b/School.Core/Resources/SharedResources.EN.resx
@@ -120,11 +120,17 @@
   <data name="BadRequest" xml:space="preserve">
     <value>can't understand this request</value>
   </data>
+  <data name="ChangedPassword" xml:space="preserve">
+    <value>Password had been changed</value>
+  </data>
   <data name="Created" xml:space="preserve">
     <value>Created Successfully</value>
   </data>
   <data name="Deleted" xml:space="preserve">
     <value>Deleted Successfully</value>
+  </data>
+  <data name="DeletedFailed" xml:space="preserve">
+    <value>Delete Operation Failed</value>
   </data>
   <data name="DepartmentID" xml:space="preserve">
     <value>Department ID</value>
@@ -134,6 +140,9 @@
   </data>
   <data name="FaildToAddUser" xml:space="preserve">
     <value>Failed to add User</value>
+  </data>
+  <data name="FaildToChangePassword" xml:space="preserve">
+    <value>Failed to change password</value>
   </data>
   <data name="IsExist" xml:space="preserve">
     <value>Is Alrady Exist</value>
